--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-swipeable": "^6.1.2",
     "react-switch": "^6.0.0",
     "sass": "^1.34.0",
     "web-vitals": "^1.1.2"
