--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-map-gl": "^6.1.16",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^1.1.5",
     "react-swipeable": "^6.1.2",
     "react-switch": "^6.0.0",
     "sass": "^1.34.0",
