--- a/client/package.json
+++ b/client/package.json
@@ -6,13 +6,12 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "node-sass": "^6.0.0",
-    "react": "^17.0.2",
+    "node-sass": "^4.14.1",
+    "react": "^17.0.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
-    "react-map-gl": "^6.1.16",
+    "react-map-gl": "^6.1.11",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^1.1.5",
     "react-swipeable": "^6.1.2",
     "react-switch": "^6.0.0",
     "sass": "^1.34.0",
@@ -41,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-scripts": "2.0.3"
   }
 }
