--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^5.2.0",
     "react-swipeable": "^6.1.2",
     "react-switch": "^6.0.0",
+    "react-scripts": "4.0.3",
     "sass": "^1.34.0",
     "web-vitals": "^1.1.2"
   },
@@ -40,8 +41,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "react-scripts": "2.0.3"
   }
 }
