--- a/client/package.json
+++ b/client/package.json
@@ -8,14 +8,14 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "framer-motion": "^4.1.17",
-    "node-sass": "^6.0.1",
+    "mapbox-gl": "^2.8.2",
+    "node-sass": "^7.0.1",
     "react": "^17.0.1",
     "react-code-blocks": "^0.0.9-0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
-    "react-map-gl": "^6.1.11",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.1",
     "react-swipeable": "^6.1.2",
     "react-switch": "^6.0.0",
     "sass": "^1.34.0",
